Refactor (#17)